# tmtusync

./: .gitignore  Cargo.toml  README.md  TODO.txt  hls.min.js
src/: main.rs  protocol.rs
src/actors/: participant.rs  room.rs  room_repository.rs  websocket_transport.rs
static/: app.js  index.html  plyr.css  sprites.css  style.css
templates/: base.html  create_room.html  hello.html  room.html
