[package]
name = "tmtusync"
version = "0.1.0"
authors = ["Felix Kaaman <tmtu@tmtu.ee>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "*"
futures-util = "*"
async-channel = "*"
async-trait = "*"

askama = "0.10"
askama_actix = "0.11"

env_logger = "*"
thiserror = "*"
stop-token = { git = "https://github.com/soruh/stop-token" }
anyhow = "*"
chrono = "*"
hex-slice = "*"
#bytes = "1.0"
log = "*"
byteorder = "*"
serde = "*"
serde_json = "*"
# ac-ffmpeg = "0.15"

actix-web-actors = "3"
actix-web = "3"
actix-files = "0.5"
actix-identity = "0.3"
actix = "0.10"
actix-rt = "1.1"

